--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "game-utils"
-version = "0.1.1"
+version = "0.1.2"
 authors = [
     { name="Bee Hall", email="bhall1224@gmail.com" },
 ]
@@ -11,6 +11,10 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+]
+dependencies = [
+    "pygame",
+    "numpy"
 ]
 
 [project.urls]
