--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "game-utils"
-version = "0.1.3"
+version = "0.2.0"
 authors = [
     { name="Bee Hall", email="bhall1224@gmail.com" },
 ]
@@ -14,7 +14,8 @@ classifiers = [
 ]
 dependencies = [
     "pygame",
-    "numpy"
+    "numpy",
+    "click"
 ]
 
 [project.urls]
