packaging support added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,9 @@ dependencies = [
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+
+[tool.setuptools.packages.find]
+exclude = ["tests"]
