--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "game-utils"
-version = "1.1.2"
+version = "1.1.3"
 authors = [
     { name="Bee Hall", email="bhall1224@gmail.com" },
 ]
@@ -18,7 +18,7 @@ dependencies = [
 ]
 
 [project.urls]
-"Homepage" = "https://gitlab.com/bhall/game_utils.git"
+"Homepage" = "https://github.com/bhall1224/game-utils"
 
 [build-system]
 requires = ["setuptools"]
